--- a/checker.html
+++ b/checker.html
@@ -11,7 +11,7 @@
     input.addEventListener("keydown", function (e) {
         if (e.key === "Enter") {
             if (input.value === ""){alert("đã nhập gì đâu???")}
-            (isPalindrome(input.value))? alert("có palindrome"):("không palidrome");
+            (isPalindrome(input.value))? alert("có palindrome"):alert("không palidrome");
             input.value = "";
         }
     });
